<resources>
    <!-- UI -->
    <string name="title_activity_settings">Setting sActivity</string>
    <string name="app_name">Type One Log</string>
    <string name="add_glucose_level">Add Glucose Level</string>
    <string name="add_insulin_shot">Add Insulin Shot</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_activity">Add Activity</string>
    <string name="add_more">Add More</string>
    <string name="show_diagram">Show Digram</string>
    <string name="title_activity_meal_ingredient">Add ingredient</string>
    <string name="send_results">Send Results</string>
    <string name="product_name">Product</string>
    <string name="product_weight">Weight</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="insulin_name">Insulin name</string>
    <string name="glucose_level_record">Glucose level is %2.1f mmol/L</string>
    <!--<string name="glucose_level_record">Glucose level is %2.1f mg/dL</string>-->
    <string name="glucose_level">Glucose level, mmol/L</string>
    <string name="physical_activity">Physical Activity</string>
    <string name="period">Interval</string>
    <string name="amount_units">Amount, units</string>
    <string name="zero">0</string>
    <string name="physical_state">Physical state</string>
    <string name="physical_activity_duration_minutes">%s for %d minutes</string>
    <string name="physical_activity_duration_hours_minutes">%s for %d hours %d minutes</string>
    <string name="other_record">%s for today</string>
    <string name="shot_record">Shot of %d units of %s</string>
    <string name="bread_units_counter">Total %2.1f bread units %2.1f kkal</string>
    <string name="ingredient_record">%s %d gramm</string>
    <!-- DB Insulin -->
    <string name="tujeo">Tujeo</string>
    <string name="apidra">Apidra</string>
    <string name="humulin">Humulin</string>
    <string name="humalog">Humalog</string>
    <!-- DB Activity -->
    <string name="morning_exercise">Morning exercise</string>
    <string name="warm_up">Warm up</string>
    <string name="running">Running</string>
    <string name="swimming">Swimming</string>
    <string name="walking">Walking</string>
    <!-- DB Other -->
    <string name="hormons">Hormons</string>
    <string name="cold">Cold</string>
    <!-- DB Food -->
    <string name="sugar">Sugar</string>
    <string name="milk">Milk</string>
    <string name="ray_bread">Ray bread</string>
    <string name="wheat_bread">Wheat bread</string>
    <string name="potato_boiled">Potato boiled</string>
    <string name="potato_fried">Potato fried</string>
    <string name="spaghetti">Spaghetti</string>
    <string name="buckwheat">Buckweat</string>
    <string name="rice">Rice</string>
    <string name="butter">Butter</string>
    <string name="cheese">Butter</string>
    <string name="sausage">Sausage</string>
    <string name="burger">Burger</string>
    <string name="pork_boiled">Pork boiled</string>
    <string name="pork_fried">Pork fried</string>
    <string name="beef_boiled">Beef boiled</string>
    <string name="beef_fried">Beef fried</string>
    <string name="chicken_boiled">Chicken boiled</string>
    <string name="chicken_fried">Chicken fried</string>
    <string name="egg">Egg</string>
    <string name="omelette">Omeletter</string>
    <string name="title_activity_new_ingredient">New Ingredient</string>

    <string name="ingredient_name">Product Name</string>
    <string name="bread_units_per_100g">Bread Units per 100g</string>
    <string name="glycemic_index">Glycemic index</string>
    <string name="fat_per_100g">Fat per 100g</string>
    <string name="carbohydrate_per_100g">Carbohydrate per 100g</string>
    <string name="protein_per_100g">Protein per 100g</string>
    <string name="energy_kkal_per_100g">Energy, kkal per 100g</string>
    <string name="default_weight">Product Weight, gram</string>

    <string name="empty_string" />
    <string name="title_activity_diary">DiaryActivity</string>
    <string name="title_activity_diary_record">DiaryRecordActivity</string>

</resources>
