<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:background="@color/colorAccent">

        <Button
            android:id="@+id/sugarButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorButtonText"
            android:text="@string/add_sugar_level" />

        <Button
            android:id="@+id/insulinButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorButtonText"
            android:text="@string/add_insulin_shot" />

        <Button
            android:id="@+id/mealButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorButtonText"
            android:text="@string/add_meal" />

        <Button
            android:id="@+id/activityButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorButtonText"
            android:text="@string/add_activity" />

    </GridLayout>


</android.support.constraint.ConstraintLayout>