<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ingredient"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10sp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10sp">

                <TextView
                    android:id="@+id/product"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/productSelection"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp">

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/weightInput"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/zero"
                    android:imeOptions="actionDone"
                    android:inputType="numberSigned" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/removeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_margin="@dimen/fab_margin"
            android:background="#00000000"
            android:contentDescription="@string/remove"
            android:text="@string/add"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_minus" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>