<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MealIngredientActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:padding="@dimen/button_gap"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:columnCount="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"/>

            <Spinner
                android:id="@+id/productSelection"
                android:layout_width="200sp"
                style = "@style/EditTextDefault"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_weight"/>

            <EditText
                android:id="@+id/weightInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/product_weight"
                style = "@style/EditTextDefault"
                android:inputType="numberDecimal"/>

            <TextView
                android:id="@+id/unitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Units"
                android:visibility="gone"/>

            <Spinner
                android:id="@+id/unitsList"
                android:layout_width="200sp"
                style = "@style/EditTextDefault"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/unitQuantityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unit quantity"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/unitQuantityInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/product_weight"
                style = "@style/EditTextDefault"
                android:inputType="numberDecimal"
                android:visibility="gone"/>


        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:tint="@color/colorAccent"
                android:text="@string/add"
                android:contentDescription="@string/add"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/ic_return" />

            <ImageButton
                android:id="@+id/newIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:tint="@color/colorAccent"
                android:text="@string/add"
                android:layout_gravity="bottom"
                android:contentDescription="@string/add"
                android:paddingLeft="@dimen/button_gap"
                app:srcCompat="@drawable/ic_plus" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveMealIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/save"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_check" />

</android.support.design.widget.CoordinatorLayout>